--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 		<span>Name :</span>
 		<input type="text" name="name"><br>
 		<span>Password</span>
-		<input type="text" name="password"><br>
+		<input type="password" name="password"><br>
 		<input type="submit" value="Login">
 		<br><br>
 	</form>
