--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -5,6 +5,7 @@
 <title>Sign Up</title>
 </head>
 <body>
+	<span><a href="/">Home Page</a></span>
 	<form action="createAccount" method="post">
 		<span>Enter your name :</span>
 		<input type="text" name="name" required><br>
