--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,14 +5,27 @@
 <title>home</title>
 </head>
 <body>
+	<div>
 	<span><a href="/">Home Page</a></span>
 	<span>---------------------</span>
 	<span><a href="/MyPage">Your Page</a></span>
+	</div>
+	<span>
 	<div th:each="x : ${account}">
 		<form action="addFriend">
 			<input th:value="${x.name}" name="name" readonly>
 			<input  type="submit" value="Add Friend">
 		</form>
 	</div>
+	</span>
+	<span>
+	<div th:each="x : ${po}">
+				<span th:text="${x.postid}"></span>
+				<span th:text="${x.date}"></span>
+				<p th:text="${x.name}"></p>
+				<h2 th:text="${x.post}"></h2>
+				<p th:text="${x.likes}"></p><br><hr>
+			</div>
+	</span>
 </body>
 </html>
