--- a/src/main/resources/templates/Personal.html
+++ b/src/main/resources/templates/Personal.html
@@ -23,9 +23,12 @@
 		<input type="submit" value="Create A Post">
 	</form>
 	<div th:each="x : ${personalPosts}">
-				<span th:text="${owner}"></span>
-				<span>             </span>
-				<p th:text="${x.post}"></p>
+				<span th:text="${x.name}"></span>
+				<span>------</span>
+				<span th:text="${x.time}"></span>
+				<span>------</span>
+				<span th:text="${x.day}"></span>
+				<h2 th:text="${x.post}"></h2>
 				<p th:text="${x.likes}"></p><hr>
 			</div>
 </body>
